--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -192,10 +192,10 @@
             <div class="w-full">
                 <div class="my-12 text-center">
                     <h5 class="section-header-title-small">
-                         {{ element_4.cards_header_title_small }}
+                        {{ element_4.cards_header_title_small }}
                     </h5>
                     <h2 id="how-does-the-data-deposition-work" class="section-header-title">
-                         {{ element_4.cards_header_title }}                        
+                        {{ element_4.cards_header_title }}                        
                     </h2>
                 </div>
             </div>
@@ -211,84 +211,101 @@
             <div class="flex flex-nowrap gap-6">
                 <div class="w-1/4">
                     <div class="h-full shadow bg-white flex flex-col border-0">
-  <img
-    class="card-img-top cards-static-images max-w-full h-auto"
-    src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-collection-policy.png"
-    alt="Collection Policy"
-    loading="lazy"
-  />
+                        <img
+                            class="card-img-top cards-static-images max-w-full h-auto"
+                            src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                            loading="lazy"
+                            />
 
-  <div class="card-body home-resources-body p-4">
-    <h5 class="card-title mb-3">
-      <a class="text-left block" href="/browser/collection-policy">Collection Policy 1</a>
-    </h5>
+                        <div class="card-body home-resources-body p-4">
+                            <h5 class="card-title mb-3">
+                                <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                            </h5>
 
-    <p class="card-text home-resources-text text-left">
-      Scope of collections, evaluation, and storage duration
-    </p>
+                            <p class="card-text home-resources-text text-left">
+                                {{ element_4.card_1_text }}
+                            </p>
 
-    <!-- display: contents -->
-    <p class="contents">
-      <a class="btn basic-arche-btn home-resources-btn" href="/browser/collection-policy">Show</a>
-    </p>
-  </div>
-</div>
+                            <!-- display: contents -->
+                            <p class="contents">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                            </p>
+                        </div>
+                    </div>
 
 
                 </div>
                 <div class="w-1/4">
-                    <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                        <div class="mb-6 flex items-center justify-center">
-                            <img class="card-img-top home-resources-images max-w-full h-auto"
-                                 src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}"
-                                 width="165" height="138">
-                        </div>
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        <img
+                            class="card-img-top cards-static-images max-w-full h-auto"
+                            src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                            loading="lazy"
+                            />
+
                         <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3 text-center">
-                                <a class="home-resources-title" href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
+                            <h5 class="card-title mb-3">
+                                <a class="text-left block"  href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
                             </h5>
-                            <p class="card-text home-resources-text">{{ element_4.card_2_text }}</p>
-                            <p class="mt-auto">
+
+                            <p class="card-text home-resources-text text-left">
+                                {{ element_4.card_2_text }}
+                            </p>
+
+                            <!-- display: contents -->
+                            <p class="contents">
                                 <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
                             </p>
                         </div>
-                    </article>
+                    </div>
                 </div>
                 <div class="w-1/4">
-                    <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                        <div class="mb-6 flex items-center justify-center">
-                            <img class="card-img-top home-resources-images max-w-full h-auto"
-                                 src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}"
-                                 width="165" height="138">
-                        </div>
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        <img
+                            class="card-img-top cards-static-images max-w-full h-auto"
+                            src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                            loading="lazy"
+                            />
+
                         <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3 text-center">
-                                <a class="home-resources-title" href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
+                            <h5 class="card-title mb-3">
+                                <a class="text-left block"  href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
                             </h5>
-                            <p class="card-text home-resources-text">{{ element_4.card_3_text }}</p>
-                            <p class="mt-auto">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
+
+                            <p class="card-text home-resources-text text-left">
+                                {{ element_4.card_2_text }}
+                            </p>
+
+                            <!-- display: contents -->
+                            <p class="contents">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
                             </p>
                         </div>
-                    </article>
+                    </div>
                 </div>
                 <div class="w-1/4">
-                    <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                        <div class="mb-6 flex items-center justify-center">
-                            <img class="card-img-top home-resources-images max-w-full h-auto"
-                                 src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}"
-                                 width="165" height="138">
-                        </div>
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        <img
+                            class="card-img-top cards-static-images max-w-full h-auto"
+                            src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                            loading="lazy"
+                            />
+
                         <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3 text-center">
-                                <a class="home-resources-title" href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
+                            <h5 class="card-title mb-3">
+                                <a class="text-left block"  href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
                             </h5>
-                            <p class="card-text home-resources-text">{{ element_4.card_4_text }}</p>
-                            <p class="mt-auto">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
+
+                            <p class="card-text home-resources-text text-left">
+                                {{ element_4.card_2_text }}
+                            </p>
+
+                            <!-- display: contents -->
+                            <p class="contents">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
                             </p>
                         </div>
-                    </article>
+                    </div>
                 </div>
             </div>
 
