--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -203,13 +203,15 @@
     </div>
 </div>
 
+
 <div class="w-full flex justify-center resources-container-home">
   <div class="grid grid-cols-6 gap-4">
     <div class="col-span-4 col-start-2 container-w980">
-      <!-- Use GRID for equal columns -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+
+      <!-- Force exactly 4 equal columns on one row -->
+      <div class="grid grid-cols-4 gap-6">
         <!-- Card 1 -->
-        <div class="h-full shadow bg-white flex flex-col border-0">
+        <div class="h-full shadow bg-white flex flex-col border-0 min-w-0">
           <img class="card-img-top cards-static-images max-w-full h-auto"
                src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-collection-policy.png"
                alt="Collection Policy" loading="lazy">
@@ -227,7 +229,7 @@
         </div>
 
         <!-- Card 2 -->
-        <div class="h-full shadow bg-white flex flex-col border-0">
+        <div class="h-full shadow bg-white flex flex-col border-0 min-w-0">
           <img class="card-img-top cards-static-images max-w-full h-auto"
                src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-deposition-agreement.png"
                alt="Deposition Agreement" loading="lazy">
@@ -245,7 +247,7 @@
         </div>
 
         <!-- Card 3 -->
-        <div class="h-full shadow bg-white flex flex-col border-0">
+        <div class="h-full shadow bg-white flex flex-col border-0 min-w-0">
           <img class="card-img-top cards-static-images max-w-full h-auto"
                src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-filenames.png"
                alt="Filenames, Formats &amp; Metadata" loading="lazy">
@@ -263,7 +265,7 @@
         </div>
 
         <!-- Card 4 -->
-        <div class="h-full shadow bg-white flex flex-col border-0">
+        <div class="h-full shadow bg-white flex flex-col border-0 min-w-0">
           <img class="card-img-top cards-static-images max-w-full h-auto"
                src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-faq-new.png"
                alt="FAQ" loading="lazy">
@@ -280,7 +282,7 @@
           </div>
         </div>
       </div>
-      <!-- /grid -->
+
     </div>
   </div>
 </div>
