--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -204,89 +204,38 @@
 </div>
 
 
-<div class="w-full flex justify-center resources-container-home">
-  <div class="grid grid-cols-6 gap-4">
-    <div class="col-span-4 col-start-2 container-w980">
 
-      <!-- Force exactly 4 equal columns on one row -->
-      <div class="grid grid-cols-4 gap-6">
-        <!-- Card 1 -->
-        <div class="h-full shadow bg-white flex flex-col border-0 min-w-0">
-          <img class="card-img-top cards-static-images max-w-full h-auto"
-               src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-collection-policy.png"
-               alt="Collection Policy" loading="lazy">
-          <div class="card-body home-resources-body p-4">
-            <h5 class="card-title mb-3">
-              <a class="text-left block" href="/browser/collection-policy">Collection Policy</a>
-            </h5>
-            <p class="card-text home-resources-text text-left">
-              Scope of collections, evaluation, and storage duration
-            </p>
-            <p class="contents">
-              <a class="btn basic-arche-btn home-resources-btn" href="/browser/collection-policy">Show</a>
-            </p>
-          </div>
-        </div>
 
-        <!-- Card 2 -->
-        <div class="h-full shadow bg-white flex flex-col border-0 min-w-0">
-          <img class="card-img-top cards-static-images max-w-full h-auto"
-               src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-deposition-agreement.png"
-               alt="Deposition Agreement" loading="lazy">
-          <div class="card-body home-resources-body p-4">
-            <h5 class="card-title mb-3">
-              <a class="text-left block" href="/browser/deposition-agreement">Deposition Agreement</a>
-            </h5>
-            <p class="card-text home-resources-text text-left">
-              Legal agreement between ARCHE and depositors
-            </p>
-            <p class="contents">
-              <a class="btn basic-arche-btn home-resources-btn" href="/browser/deposition-agreement">Show</a>
-            </p>
-          </div>
-        </div>
+<!-- inner row -->
+<div class="flex flex-nowrap gap-6">
+  <!-- card 1 -->
+  <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+    <div class="h-full shadow bg-white flex flex-col border-0">
+      card 1
+    </div>
+  </div>
 
-        <!-- Card 3 -->
-        <div class="h-full shadow bg-white flex flex-col border-0 min-w-0">
-          <img class="card-img-top cards-static-images max-w-full h-auto"
-               src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-filenames.png"
-               alt="Filenames, Formats &amp; Metadata" loading="lazy">
-          <div class="card-body home-resources-body p-4">
-            <h5 class="card-title mb-3">
-              <a class="text-left block" href="/browser/filenames-formats-metadata">Filenames, Formats &amp; Metadata</a>
-            </h5>
-            <p class="card-text home-resources-text text-left">
-              Prepare data correctly
-            </p>
-            <p class="contents">
-              <a class="btn basic-arche-btn home-resources-btn" href="/browser/filenames-formats-metadata">Show</a>
-            </p>
-          </div>
-        </div>
+  <!-- card 2 -->
+  <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+    <div class="h-full shadow bg-white flex flex-col border-0">
+      card 2
+    </div>
+  </div>
 
-        <!-- Card 4 -->
-        <div class="h-full shadow bg-white flex flex-col border-0 min-w-0">
-          <img class="card-img-top cards-static-images max-w-full h-auto"
-               src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-faq-new.png"
-               alt="FAQ" loading="lazy">
-          <div class="card-body home-resources-body p-4">
-            <h5 class="card-title mb-3">
-              <a class="text-left block" href="/browser/faq">FAQ</a>
-            </h5>
-            <p class="card-text home-resources-text text-left">
-              Answers to frequently asked questions and practical tips for depositors
-            </p>
-            <p class="contents">
-              <a class="btn basic-arche-btn home-resources-btn" href="/browser/faq">Show</a>
-            </p>
-          </div>
-        </div>
-      </div>
+  <!-- card 3 -->
+  <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+    <div class="h-full shadow bg-white flex flex-col border-0">
+      card 3
+    </div>
+  </div>
 
+  <!-- card 4 -->
+  <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+    <div class="h-full shadow bg-white flex flex-col border-0">
+      card 4
     </div>
   </div>
 </div>
-
 
 
 <div class="w-full flex justify-center resources-container-home">
