--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -185,8 +185,7 @@
 
 <!-- ELEMENT 4 four cards -->
 
-
-<div class="w-full flex justify-center ">
+<div class="w-full flex justify-center bg-white">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <div class="w-full">
@@ -244,22 +243,22 @@
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}"
                                 loading="lazy"
                                 />
 
                             <div class="card-body home-resources-body p-4">
                                 <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                    <a class="text-left block"  href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
                                 </h5>
 
                                 <p class="card-text home-resources-text text-left">
-                                    {{ element_4.card_1_text }}
+                                    {{ element_4.card_2_text }}
                                 </p>
 
                                 <!-- display: contents -->
                                 <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
                                 </p>
                             </div>
                         </div>
@@ -272,22 +271,22 @@
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}"
                                 loading="lazy"
                                 />
 
                             <div class="card-body home-resources-body p-4">
                                 <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                    <a class="text-left block"  href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
                                 </h5>
 
                                 <p class="card-text home-resources-text text-left">
-                                    {{ element_4.card_1_text }}
+                                    {{ element_4.card_3_text }}
                                 </p>
 
                                 <!-- display: contents -->
                                 <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
                                 </p>
                             </div>
                         </div>
@@ -300,22 +299,22 @@
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
                                 class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}"
                                 loading="lazy"
                                 />
 
                             <div class="card-body home-resources-body p-4">
                                 <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                    <a class="text-left block"  href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
                                 </h5>
 
                                 <p class="card-text home-resources-text text-left">
-                                    {{ element_4.card_1_text }}
+                                    {{ element_4.card_4_text }}
                                 </p>
 
                                 <!-- display: contents -->
                                 <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
                                 </p>
                             </div>
                         </div>
@@ -326,116 +325,6 @@
     </div>
 </div>
 
-
-<div class="w-full flex justify-center resources-container-home">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2 container-w980">
-
-            <div class="flex flex-nowrap gap-6">
-                <div class="w-1/4">
-                    <div class="h-full shadow bg-white flex flex-col border-0">
-                        <img
-                            class="card-img-top cards-static-images max-w-full h-auto"
-                            src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
-                            loading="lazy"
-                            />
-
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
-                            </h5>
-
-                            <p class="card-text home-resources-text text-left">
-                                {{ element_4.card_1_text }}
-                            </p>
-
-                            <!-- display: contents -->
-                            <p class="contents">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
-                            </p>
-                        </div>
-                    </div>
-
-
-                </div>
-                <div class="w-1/4">
-                    <div class="h-full shadow bg-white flex flex-col border-0">
-                        <img
-                            class="card-img-top cards-static-images max-w-full h-auto"
-                            src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}"
-                            loading="lazy"
-                            />
-
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-left block"  href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
-                            </h5>
-
-                            <p class="card-text home-resources-text text-left">
-                                {{ element_4.card_2_text }}
-                            </p>
-
-                            <!-- display: contents -->
-                            <p class="contents">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w-1/4">
-                    <div class="h-full shadow bg-white flex flex-col border-0">
-                        <img
-                            class="card-img-top cards-static-images max-w-full h-auto"
-                            src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}"
-                            loading="lazy"
-                            />
-
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-left block"  href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
-                            </h5>
-
-                            <p class="card-text home-resources-text text-left">
-                                {{ element_4.card_3_text }}
-                            </p>
-
-                            <!-- display: contents -->
-                            <p class="contents">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="w-1/4">
-                    <div class="h-full shadow bg-white flex flex-col border-0">
-                        <img
-                            class="card-img-top cards-static-images max-w-full h-auto"
-                            src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}"
-                            loading="lazy"
-                            />
-
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-left block"  href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
-                            </h5>
-
-                            <p class="card-text home-resources-text text-left">
-                                {{ element_4.card_4_text }}
-                            </p>
-
-                            <!-- display: contents -->
-                            <p class="contents">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-    </div>
-</div>
 
 
 
