--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -219,12 +219,12 @@
                                 loading="lazy"
                                 />
 
-                            <div class="card-body home-resources-body p-4">
+                            <div class="card-body home-resources-body p-4 h-full">
                                 <h5 class="card-title mb-3">
                                     <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
                                 </h5>
 
-                                <p class="card-text home-resources-text text-left">
+                                <p class="card-text home-resources-text text-left  h-full">
                                     {{ element_4.card_1_text }}
                                 </p>
 
@@ -247,12 +247,12 @@
                                 loading="lazy"
                                 />
 
-                            <div class="card-body home-resources-body p-4">
+                            <div class="card-body home-resources-body p-4 h-full">
                                 <h5 class="card-title mb-3">
                                     <a class="text-left block"  href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
                                 </h5>
 
-                                <p class="card-text home-resources-text text-left">
+                                <p class="card-text home-resources-text text-left h-full">
                                     {{ element_4.card_2_text }}
                                 </p>
 
@@ -275,12 +275,12 @@
                                 loading="lazy"
                                 />
 
-                            <div class="card-body home-resources-body p-4">
+                            <div class="card-body home-resources-body p-4 h-full">
                                 <h5 class="card-title mb-3">
                                     <a class="text-left block"  href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
                                 </h5>
 
-                                <p class="card-text home-resources-text text-left">
+                                <p class="card-text home-resources-text text-left h-full">
                                     {{ element_4.card_3_text }}
                                 </p>
 
@@ -303,12 +303,12 @@
                                 loading="lazy"
                                 />
 
-                            <div class="card-body home-resources-body p-4">
+                            <div class="card-body home-resources-body p-4 h-full">
                                 <h5 class="card-title mb-3">
                                     <a class="text-left block"  href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
                                 </h5>
 
-                                <p class="card-text home-resources-text text-left">
+                                <p class="card-text home-resources-text text-left h-full">
                                     {{ element_4.card_4_text }}
                                 </p>
 
