--- a/arche-react/en/technical-setup.html
+++ b/arche-react/en/technical-setup.html
@@ -1,39 +1,81 @@
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_1.intro }}      
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<div class="container-fluid">
-    <!-- Fluid container with background -->
-    <div class="container p-2 maxw-980" style="padding:24px !important;">
-        <div class="row">
-            <div class="col">
-                {{ element_1.intro }}               
+
+
+
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
+                    <h2 class="section-header-title" id="software-stack">
+                        {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
+                    </h2>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <h2 class="section-header-title" id="software-stack">
-                    {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
+                    {{ element_2.content }}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
+                    <h2 class="section-header-title" id="client-libraries">
+                    {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
                 </h2>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container maxw-980">
-    <div class="row gx-5 justify-content-center">
-        <div class="col text-left">
-            {{ element_2.content }}
-            
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
+                    {{ element_3.content }}
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+
+
+
+
 <div class="container maxw-980">
     <div class="row gx-5 justify-content-center">
         <div class="col">
             <div class="my-5 text-center">
                 <h2 class="section-header-title" id="client-libraries">
-                   {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
+                    {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
                 </h2>
             </div>
         </div>
@@ -42,7 +84,7 @@
 <div class="container maxw-980">
     <div class="row gx-5 justify-content-center">
         <div class="col text-left">
-             {{ element_3.content }}
+            {{ element_3.content }}
         </div>
     </div>
     <div class="container maxw-980">
@@ -59,7 +101,7 @@
     <div class="container maxw-980">
         <div class="row gx-5 justify-content-center">
             <div class="col text-left">
-                 {{ element_4.content }}
+                {{ element_4.content }}
             </div>
         </div>
         <div class="container maxw-980">
@@ -76,7 +118,7 @@
         <div class="container maxw-980">
             <div class="row gx-5 justify-content-center">
                 <div class="col text-left">
-                     {{ element_5.content }}
+                    {{ element_5.content }}
                 </div>
             </div>
             <!-- End of fluid container -->
@@ -91,7 +133,7 @@
         <div class="col">
             <div class="my-5 text-center">
                 <p class="section-header-title-small">
-                     {{ element_6.cards_header_title_small }}
+                    {{ element_6.cards_header_title_small }}
                 </p>
                 <p class="section-header-title">
                     {{ element_6.cards_header_title }}
